err/textmining.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/textmining'...
Listing './lib/python3.5/site-packages/textmining/data'...
Listing './lib/python3.5/site-packages/textmining/doc'...
Listing './lib/python3.5/site-packages/textmining/examples'...
Compiling './lib/python3.5/site-packages/textmining/examples/examples.py'...
***   File "./lib/python3.5/site-packages/textmining/examples/examples.py", line 24
    print '\ntermdocumentmatrix_example 1\n'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/textmining/stemmer.py'...
***   File "./lib/python3.5/site-packages/textmining/stemmer.py", line 349
    print p.stem(w, 0,len(w)-1), w
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/textmining-1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
